--- a/plugin/pom.xml
+++ b/plugin/pom.xml
@@ -9,6 +9,13 @@
 
 	<packaging>jar</packaging>
 
+	<parent>
+		<groupId>org.camunda</groupId>
+		<artifactId>camunda-release-parent</artifactId>
+		<version>2.5</version>
+		<relativePath />
+	</parent>
+
 	<name>Camunda BPM Simulator</name>
 	<description>A Plugin for [Camunda BPM](http://docs.camunda.org) that simulates process execution.</description>
 
@@ -97,6 +104,13 @@
 		</dependency>
 
 	</dependencies>
+
+	<licenses>
+		<license>
+			<name>The Apache Software License, Version 2.0</name>
+			<url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
+		</license>
+	</licenses>
 
 	<scm>
 		<url>https://github.com/camunda-consulting/camunda-bpm-simulator</url>
