--- a/plugin/pom.xml
+++ b/plugin/pom.xml
@@ -12,7 +12,7 @@
 	<parent>
 		<groupId>org.camunda</groupId>
 		<artifactId>camunda-release-parent</artifactId>
-		<version>2.5</version>
+		<version>3.1</version>
 		<relativePath />
 	</parent>
 
@@ -20,6 +20,7 @@
 	<description>A Plugin for [Camunda BPM](http://docs.camunda.org) that simulates process execution.</description>
 
 	<properties>
+		<version.java>1.8</version.java>
 		<camunda.version>7.9.0</camunda.version>
 		<maven.compiler.source>1.8</maven.compiler.source>
 		<maven.compiler.target>1.8</maven.compiler.target>
